# signal

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
signal_core/: .gitignore  CMakeLists.txt
signal_core/install/include/signal_ui/: text.h
signal_core/install/lib/: signal_ui.lib
signal_core/libs/signal_ui/: CMakeLists.txt
signal_core/libs/signal_ui/include/signal_ui/: text.h
signal_core/libs/signal_ui/src/: text.cpp
signal_forge/host/: CMakeLists.txt
signal_forge/host/app/signal_forge/: CMakelists.txt
signal_forge/host/app/signal_forge/src/: app.cpp  app.h  graph_serialization.cpp  graph_serialization.h  main_frame.cpp  main_frame.h  sf_protocol_client.h
signal_forge/host/libs/nodes/fg/: fg.c  fg.h
signal_forge/host/libs/nodes/my_block/: my_block.c  my_block.h
signal_forge/host/libs/signal_forge_generator/: CMakeLists.txt
signal_forge/host/libs/signal_forge_generator/include/signal_forge_generator/: generator.h  header_parser.h
signal_forge/host/libs/signal_forge_generator/src/: generator.cpp  header_parser.cpp
signal_forge/host/libs/signal_forge_generator/test/: CMakeLists.txt
signal_forge/host/libs/signal_forge_generator/test/src/: main.cpp
signal_forge/host/libs/signal_forge_graph/: CMakeLists.txt
signal_forge/host/libs/signal_forge_graph/include/signal_forge_graph/: graph.h  node_canvas.h  property_adapter.h  renderer.h
signal_forge/host/libs/signal_forge_graph/src/: graph.cpp  node_canvas.cpp  property_adapter.cpp  renderer.cpp
signal_forge/host/test/: CMakeLists.txt
signal_forge/host/test/src/: main.cpp
signal_stream/: CMakeLists.txt  CMakeUserPresets.json  README.md  Signal Stream Layout.puml
signal_stream/app/signal_stream/: CMakelists.txt
signal_stream/app/signal_stream/src/: line_plot.cpp  line_plot.h  main.cpp  project_serialization.cpp  project_serialization.h  source_config.cpp  source_config.h  ss_plot.cpp  ss_plot.h  time_plot.cpp  time_plot.h
signal_stream/libs/adapters/adapter_mqtt/: CMakeLists.txt
signal_stream/libs/adapters/adapter_mqtt/include/adapter_mqtt/: mqtt_adapter.h
signal_stream/libs/adapters/adapter_mqtt/src/: mqtt_adapter.cpp
signal_stream/libs/adapters/adapter_opcua/: CMakeLists.txt
signal_stream/libs/adapters/adapter_opcua/include/adapter_opcua/: opcua_adapter.h
signal_stream/libs/adapters/adapter_opcua/src/: opcua_adapter.cpp
signal_stream/libs/adapters/adapter_random/: CMakeLists.txt
signal_stream/libs/adapters/adapter_random/include/adapter_random/: random_adapter.h  random_adapter_actions.h
signal_stream/libs/adapters/adapter_random/src/: perlin.h  random_adapter.cpp  random_adapter_actions.cpp
signal_stream/libs/adapters/adapter_signalforge/: CMakeLists.txt
signal_stream/libs/adapters/adapter_signalforge/include/adapter_signalforge/: signalforge_adapter.h  signalforge_adapter_actions.h
signal_stream/libs/adapters/adapter_signalforge/src/: signalforge_adapter.cpp  signalforge_adapter_actions.cpp
signal_stream/libs/adapters/adapter_udp/: CMakeLists.txt
signal_stream/libs/adapters/adapter_udp/include/adapter_udp/: udp_adapter.h
signal_stream/libs/apache_bridge/: CMakeLists.txt
signal_stream/libs/apache_bridge/include/apache_bridge/: apache_bridge.h
signal_stream/libs/apache_bridge/src/: apache_bridge.cpp
signal_stream/libs/signal_stream_app/: CMakeLists.txt
signal_stream/libs/signal_stream_app/include/signal_stream_app/: source_action_factory.h  source_action_interface.h  source_action_meta_util.h  source_config_propgrid_registry.h
signal_stream/libs/signal_stream_app/src/: source_config_propgrid_registry.cpp
signal_stream/libs/signal_stream_core/: CMakeLists.txt
signal_stream/libs/signal_stream_core/include/signal_stream_core/: hash.h  orchestrator.h  project.h  service-bus.h  service-logger.h  service-source-registry.h  service-storage-backend-csv.h  service-storage-backend-file-mixin.h  service-storage-backend-null.h  service-storage-backend-parquet.h  service-storage-backend.h  service-storage.h  service-window.h  source.h  source_factory.h  source_handle.h  subscriber-registry.h  subscription-token.h
signal_stream/libs/signal_stream_core/src/: adapter_registration.cpp  orchestrator.cpp  source.cpp  source_registry.cpp  storage_manager.cpp
signal_stream/test/: mqtt_project.json  opcua_project.json  random_project.json  sf_project.json  sf_project.json.bak
